added GET endpoint for trips (untested)
